--- a/frontend/styles/views/main/main-view.css
+++ b/frontend/styles/views/main/main-view.css
@@ -64,6 +64,15 @@ vaadin-tab[selected] {
 }
 
 
+vaadin-grid-cell-content[part~="header-cell"]{
+	font-size: var(--lumo-font-size-m)
+}
 
-
+vaadin-grid vaadin-grid-cell-content {
+    font-size: var(--lumo-font-size-s)
+}
+.gridHeader{
+	    font-size: var(--lumo-font-size-m)
+	
+}
 
